--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/igobet/Documents/opencv-2.4.13"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
