--- a/.classpath
+++ b/.classpath
@@ -27,10 +27,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OpenCv">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="/Users/igobet/Documents/opencv-2.4.13"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Igno/opencv/build/java/opencv-300.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
