--- a/.classpath
+++ b/.classpath
@@ -27,9 +27,9 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/opencv/build/java/opencv-300.jar">
+	<classpathentry kind="lib" path="C:/Users/matias.n.ceballos/Desktop/OpenCv/opencv/build/java/opencv-310.jar">
 		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/opencv/build/java/x64"/>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Users/matias.n.ceballos/Desktop/OpenCv/opencv/build/java/x64"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
